reservations are well working

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT = 7000
-MONGO_URI = "mongodb+srv://ayariamir:Keri.symboleserie154@users.t4gut0c.mongodb.net/?retryWrites=true&w=majority&appName=Users"
-JWT_SECRET = "Keri.symboleserie154"
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dkg6pdyvc
-NEXT_PUBLIC_CLOUDINARY_API_KEY=837529729879946
-NEXT_PUBLIC_CLOUDINARY_API_SECRET=wUAfXfff951cNiPqqZn3mabJ4BY
+PORT=7000
+MONGO_URI=mongodb+srv://ayariamir:Keri.symboleserie154@users.t4gut0c.mongodb.net/?retryWrites=true&w=majority&appName=Users
+JWT_SECRET=Keri.symboleserie154
+CLOUDINARY_CLOUD_NAME=dkg6pdyvc
+CLOUDINARY_API_KEY=837529729879946
+CLOUDINARY_API_SECRET=wUAfXfff951cNiPqqZn3mabJ4BY
